src/test/deca/codegen/valid/objects/fields/newSimple.deca
// Description :
//    Test simple du new
//
// Resultats :
//    Ne doit rien afficher

class A {
    int x;
    int y;
}

{
    A a = new A();
}
